--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     
 </head>
 <body>
+
+    <h1 id="muncul" ></h1>
+    <button id="tombol">Hide</button>
+    <button id="show">Show</button>
+
+    <p><button id="satu">1</button></p>
+    <p><button id="dua">2</button></p>
+    <p><button id="tiga">3</button></p>
     
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" 
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" 
+    crossorigin="anonymous"></script>
+
+    <script src="JS/app.js"></script>
 </body>
 </html>
